Make sure the login window is on top on mobile

--- a/src/components/templates/login_page_template.scss
+++ b/src/components/templates/login_page_template.scss
@@ -4,4 +4,12 @@
     main {
         @apply flex-grow flex items-center justify-center flex-col;
     }
+
+    @media (max-width: 767px) {
+        main {
+            display: flex;
+            align-items: flex-start;
+            justify-content: start;
+        }
+    }
 }
